<resources>
    <string name="app_name">Scheduler</string>
    <string name="action_settings">Settings</string>
    <string name="doubleDot">:</string>
    <string name="amViewText">AM</string>
    <string name="pmViewText">PM</string>
    <string name="Sel_Date">01.01.2016</string>
    <string name="title_activity_timeline">timeline</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="configure">Configure</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_new_task">NewTaskActivity</string>
    <string name="new_task_title">Nowe zadanie</string>
    <string name="task_name">Nazwa zadania...</string>
    <string name="start_time">Godzina rozpoczęcia</string>
    <string name="end_time">Godzina zakończenia</string>
    <string name="change">Zmień</string>
    <string name="all_day">Cały dzień</string>
    <string name="people">Osoby</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_time_picker_dialog">Wybierz godzinę</string>
    <string name="set">Ustaw</string>
    <string name="save">Zapisz</string>
    <string name="cancel">Odrzuć</string>
    <string name="title_activity_user_list_dialog">UserListDialog</string>
    <string name="approve">Zatwierdź</string>


</resources>
