<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_new_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pz.lab.scheduler.NewTaskActivity"
    tools:showIn="@layout/activity_new_task">

    <TextView
        android:text="@string/start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/end_time_button"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp" />

    <CheckBox
        android:text="@string/all_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/all_day_checkbox"
        android:layout_below="@+id/start_time_button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />

    <Button
        android:text="@string/change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start_time_button"
        android:layout_alignBaseline="@+id/end_time_button"
        android:layout_alignBottom="@+id/end_time_button"
        android:layout_alignEnd="@+id/all_day_checkbox" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/task_title"
        android:inputType="text"
        android:hint="@string/task_name"
        android:layout_marginTop="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/task_title"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
